// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllColors 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-«replaced-aria-id»"
          >
            danger
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-danger"
            style="transform: translateX(-58%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-«replaced-aria-id»"
          >
            default
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-default-400"
            style="transform: translateX(-58%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-«replaced-aria-id»"
          >
            info
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-58%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-«replaced-aria-id»"
          >
            primary
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-primary"
            style="transform: translateX(-58%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-«replaced-aria-id»"
          >
            secondary
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-secondary"
            style="transform: translateX(-58%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-«replaced-aria-id»"
          >
            success
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-success"
            style="transform: translateX(-58%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-«replaced-aria-id»"
          >
            warning
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-warning"
            style="transform: translateX(-58%);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > AllSizes 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-small"
            id="react-aria-«replaced-aria-id»"
          >
            sm
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-1 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-58%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-«replaced-aria-id»"
          >
            md
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-58%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="progress"
        aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-large"
            id="react-aria-«replaced-aria-id»"
          >
            lg
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-5 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-58%);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-«replaced-aria-id»"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
          style="transform: translateX(-58%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > DisableFinishedState 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="101%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-«replaced-aria-id»"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
        >
          101%
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
          style="transform: translateX(-0%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Finished 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="100%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-«replaced-aria-id»"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full !transition-none motion-reduce:transition-none bg-success"
          style="transform: translateX(-0%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Indeterminate 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      class="flex flex-col gap-2 w-full"
      data-indeterminate="true"
      id="react-aria-«replaced-aria-id»"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full absolute w-full origin-left animate-indeterminate-bar bg-info"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > ShowValueLabel 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-«replaced-aria-id»"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
        >
          42%
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
          style="transform: translateX(-58%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > SomePercentages 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            0%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        aria-valuetext="10%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            10%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-90%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            20%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-80%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        aria-valuetext="30%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            30%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-70%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        aria-valuetext="40%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            40%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-60%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        aria-valuetext="50%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            50%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-50%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="60"
        aria-valuetext="60%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            60%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-40%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="70"
        aria-valuetext="70%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            70%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-30%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="80"
        aria-valuetext="80%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            80%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-20%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="90"
        aria-valuetext="90%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            90%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
            style="transform: translateX(-10%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        aria-valuetext="100%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            100%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-success"
            style="transform: translateX(-0%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 20px;"
    >
      <div
        aria-label="progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        aria-valuetext="150%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-«replaced-aria-id»"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            150%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
        >
          <div
            class="h-full rounded-full !transition-none motion-reduce:transition-none bg-success"
            style="transform: translateX(-0%);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithLabel 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-«replaced-aria-id»"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
          id="react-aria-«replaced-aria-id»"
        >
          Some Label
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
          style="transform: translateX(-58%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithLabelAndValueLabel 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-labelledby="react-aria-«replaced-aria-id» react-aria-«replaced-aria-id»"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-«replaced-aria-id»"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
          id="react-aria-«replaced-aria-id»"
        >
          Some Label
        </span>
        <span
          class="text-medium"
        >
          42%
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
          style="transform: translateX(-58%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithoutPercentProp 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="progress"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      aria-valuetext="0%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-«replaced-aria-id»"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full rounded-full !transition-none motion-reduce:transition-none bg-info"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;
